5.1.5 -> 5.1.6:
    - jbj: rpmdb: add rpmdbMireApply to retrieve primary keys from index.
    - jbj: rpmio: add argiCmp and argiSort.
    - jbj: add --whatconflicts/--whatobsoletes.
    - jbj: fix: adding Fstat() broke perl builds.
    - jbj: generate Obsoletename index in rpmdb.
    - jbj: generate Filepaths index in rpmdb.
    - bero: Python 2.6 support in configure.ac
    - jbj: refactor the sumNN wrappers out of digest.c too.
    - jbj: include crc routines in a standalone file.
    - jbj: use a switch on errno to make leakage pathology filtering easier.
    - jbj: use Stat(2) for --rpmiodebug tracing.
    - jbj: fix: resurrect cpuinfo() probe, hack-o-rounds for both /proc & libio.
    - jbj: rpmio: rewrite rpmioSlurp to use Fstat(2) instead.
    - jbj: rpmrpc: add Fstat(2).
    - jbj: fix: he->tag was returning RPMTAG_BASENAMES, not RPMTAG_FILEPATHS.

5.1.4 -> 5.1.5:
    - jbj: update sk.po (Translation Project).
    - jbj: avoid mtab info leakage problems (#457940).
    - jbj: selinux: resurrect lsetfilecon using libselinux API.
    - jbj: use macro, not /bin/bash, in scriptlet_requires.
    - jbj: don't run empty transactions, avoiding obscure error msg.
    - jbj: permit a negative index as alias for the last problem added to set.
    - jbj: warn if package is not added because of platform affinity patterns.
    - proyvind: lzdio: fix build with recent api changes.
    - jbj: fix: initialize next element of rpmlog store correctly.
    - jbj: update {nl,id,pl}.po (Translation Project).
    - rse: rpmio: allow newer fnmatch to build on non-Linux platforms, too.
    - jbj: rpmio: upgrade fnmatch to version that implements FNM_EXTMATCH.
    - jbj: hdrfmt: triggerconds header extension display was incorrect.
    - jbj: don't install symclash.* to avoid picking up a dependency on python.
    - jbj: fix: check added file names against installed conflicts.
    - jbj: update nl.po (Translation Project).
    - rpm.org: permit hardlinks only with regular files.